tests/correct/adv_indentation.py
i = [1,2,3,4,5]
a = [1, 2,
3,4,
	     5,6
	 , 7,8
,9,10]
print a

b = (
             1,    2,
3, 4,
5,6,
    7, 8,
 9, 10)
print b

c = { "a": 1,
"b": 2,
              "c":3
        , "d": 4, "e": 5,
}
print c

if 5 in [1 , 2
 , 3, 
 			4, 5
 			      ]:
  print "Correct 1"

if True:
      a = 1
      b = [1, 2,
3, 4
          ,5,6]
      print a
      print b

for i in [1, 2
, 3, 4,
      5, 6,
                7, 8]:
                print i

