tests/error/syntaxerrors.py
x =
hi = 10 20
a,b = 50
a,b = 1,2,3
25 = 60

() = 1,2,3
[] = 3,4
{} = {"hi":10}
$test = "compyler"

y =
10
a b c
@test = "compy"

for i,j = range(50):
	pass

while:
	print "nope"
